Bug 499769 - Panel popups can't be resized anymore
Summary: Panel popups can't be resized anymore
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: compositing (other bugs)
Version First Reported In: git master
Platform: Other Linux
: HI major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-02-10 17:39 UTC by Nate Graham
Modified: 2025-02-14 11:38 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-02-10 17:39:39 UTC
With current git master, hovering over the edge of a panel pop-up makes the pointer use the appropriate resize shape, but actually clicking and dragging does nothing; popups can't be resized. Reproduces with all panel resizable widgets, on  vertical and horizontal panels, in floating and attached modes.

Only tested Wayland, not X11.
Comment 1 Fushan Wen 2025-02-11 14:32:34 UTC
Can also reproduce on X11
Comment 3 Bug Janitor Service 2025-02-11 16:32:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7128
Comment 4 Vlad Zahorodnii 2025-02-14 11:38:47 UTC
Git commit 8d651f3faa073047e30290971297861c3f456f50 by Vlad Zahorodnii, on behalf of Niccolò Venerandi.
Committed on 14/02/2025 at 11:26.
Pushed by vladz into branch 'master'.

Update isMovable/isResizable to reflect new specialWindows

M  +1    -1    src/x11window.cpp
M  +3    -3    src/xdgshellwindow.cpp

https://invent.kde.org/plasma/kwin/-/commit/8d651f3faa073047e30290971297861c3f456f50