Update isMovable/isResizable to reflect new specialWindows

BUG:499769